# secrets-cli

./: Cargo.toml  README.md
src/: config.rs  main.rs  opts.rs
